--- a/css/style.css
+++ b/css/style.css
@@ -4,35 +4,19 @@
 	box-sizing: border-box;
 }
 
-* {
-	margin: 0;
-	padding: 0;
-	/* font: inherit; */
-}
-
 html {
 	/* scheme: light dark; */
 	scroll-behavior: smooth;
-}
-
-body {
-	/* font-family: system-ui; */
-	font-size: 1.125rem;
-	line-height: 1.6;
 }
 
 img,
 picture,
 svg,
 video {
+  display: block;
 	max-width: 100%;
-	display: block;
 }
 
-main {
-	width: min(150ch, 100% - 4rem);
-	margin-inline: auto;
-}
 
 /* Custom Properties */
 
@@ -77,11 +61,36 @@ body {
 }
 
 section {
-	padding: 5em 2rem;
+	padding: 5em 2em;
 }
 
 strong {
 	font-weight: var(--fw-bold);
+}
+
+:focus {
+  outline: 3px solid var(--clr-accent);
+  outline-offset: 3px;
+}
+
+/* Buttons */
+
+.btn {
+  display: inline-block;
+  padding: 0.5em 2.5em;
+  background: var(--clr-accent);
+  color: var(--clr-dark);
+  text-decoration: none;
+  cursor: pointer;
+  font-size: .8rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: var(--fw-bold);
+  transition: transform 200ms ease-in-out;
+}
+
+.btn:hover {
+  transform: scale(1.1);
 }
 
 /* typography */
@@ -126,7 +135,7 @@ h3 {
 .section__subtitle--about {
 	background: var(--clr-accent);
 	padding: 0.25em 1em;
-	font-family: var(--fs-secondary);
+	font-family: var(--ff-secondary);
 	margin-bottom: 1em;
 }
 
@@ -146,6 +155,10 @@ nav {
 	box-shadow: var(--bs);
 }
 
+/* .section__title--intro {
+  max-width: 6em;
+} */
+
 .section__subtitle--intro {
 	display: inline-block;
 }
@@ -155,7 +168,7 @@ nav {
 		display: grid;
 		width: min-content;
 		margin: 0 auto;
-		column-gap: 1em;
+		grid-column-gap: 1em;
 		grid-template-areas:
 			"img title"
 			"img subtitle";
@@ -175,7 +188,100 @@ nav {
 		grid-row: 2;
 		text-align: right;
 		position: relative;
-		left: -1.5em;
+		left: -1.25em;
 		width: calc(100% + 1.5em);
 	}
+}
+
+/* My services section */
+
+.my-services {
+	background-color: var(--clr-dark);
+	background-image: url(../img/background.png);
+	backgrounnd-size: cover;
+	/* background-blend-mode: multiply; */
+	color: var(--clr-light);
+	text-align: center;
+}
+
+.section__title--services {
+	color: var(--clr-accent);
+	position: relative;
+}
+
+.section__title--services::after {
+	content: "";
+	display: block;
+	width: 3em;
+	height: 1px;
+	margin: 0.5em auto 1em;
+	background: var(--clr-light);
+	opacity: 0.25;
+}
+
+.services {
+  margin-bottom: 4em;
+}
+
+.service {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+@media (min-width: 800px) {
+	.services {
+		display: flex;
+		max-width: 1000px;
+		margin-left: auto;
+    margin-right: auto;
+	}
+
+  .service + .service {
+    margin-left: 2em;
+  }
+}
+
+.about-me {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.about-me__img {
+  box-shadow: var(--bs);
+}
+
+@media (min-width: 600px) {
+  .about-me {
+    display: grid;
+    grid-template-columns: 1fr 200px;
+    grid-template-areas: 
+      "title img"
+      "subtitle img"
+      "text img";
+    grid-column-gap: 2em;
+
+  }
+
+
+  .section__title--about {
+    grid-area: title;
+  }
+
+  .section__subtitle--about  {
+    grid-column: 1 / -1;
+    grid-row: 2;
+    position: relative;
+    left: -1em;
+    width: calc(100% + 2em);
+    padding-left: 1em;
+    padding-right: calc(200px + 4em);
+
+  }
+
+  .about-me__img {
+    grid-area: img;
+    min-width: 250px
+    position: relative;
+    z-index: 2;
+  }
 }
