--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 html {
-	/* scheme: light dark; */
 	scroll-behavior: smooth;
 }
 
@@ -13,10 +12,9 @@ img,
 picture,
 svg,
 video {
-  display: block;
+	display: block;
 	max-width: 100%;
 }
-
 
 /* Custom Properties */
 
@@ -29,7 +27,7 @@ video {
 
 	--clr-light: #fff;
 	--clr-dark: #303030;
-	--clr-accent: #16e0bd;
+	--clr-accent: #51bb60;
 
 	--fs-h1: 3rem;
 	--fs-h2: 2.25rem;
@@ -40,7 +38,7 @@ video {
 		0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
 }
 
-@media (min-width: 800px) {
+@media (min-width: 850px) {
 	:root {
 		--fs-h1: 4.5rem;
 		--fs-h2: 3.75rem;
@@ -69,28 +67,28 @@ strong {
 }
 
 :focus {
-  outline: 3px solid var(--clr-accent);
-  outline-offset: 3px;
+	outline: 3px solid var(--clr-accent);
+	outline-offset: 3px;
 }
 
 /* Buttons */
 
 .btn {
-  display: inline-block;
-  padding: 0.5em 2.5em;
-  background: var(--clr-accent);
-  color: var(--clr-dark);
-  text-decoration: none;
-  cursor: pointer;
-  font-size: .8rem;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  font-weight: var(--fw-bold);
-  transition: transform 200ms ease-in-out;
+	display: inline-block;
+	padding: 0.5em 2.5em;
+	background: var(--clr-accent);
+	color: var(--clr-dark);
+	text-decoration: none;
+	cursor: pointer;
+	font-size: 0.8rem;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: var(--fw-bold);
+	transition: transform 200ms ease-in-out;
 }
 
 .btn:hover {
-  transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 /* typography */
@@ -134,21 +132,133 @@ h3 {
 .section__subtitle--intro,
 .section__subtitle--about {
 	background: var(--clr-accent);
-	padding: 0.25em 1em;
+	padding: 0.25em 0.75em;
 	font-family: var(--ff-secondary);
 	margin-bottom: 1em;
 }
 
+.section__subtitle--work {
+	color: var(--clr-accent);
+	font-weight: var(--fw-bold);
+	margin: 2em;
+}
+
 /* header */
 
-nav {
-	display: none;
+header {
+	display: flex;
+	justify-content: space-between;
+	padding: 0.5em;
+}
+
+.logo {
+	max-width: 100px;
+	margin: 0;
+	padding: 0;
+}
+
+.nav {
+	position: fixed;
+	background: var(--clr-dark);
+	color: var(--clr-light);
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	z-index: 100;
+
+	transform: translateX(100%);
+	transition: transform 250ms ease-in-out;
+}
+
+.nav__list {
+	list-style: none;
+	display: flex;
+	height: 100%;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	margin: 0;
+	paddding: 0;
+}
+
+.nav__link {
+	color: inherit;
+	font-weight: var(--fw-bold);
+	font-size: var(--fs-h2);
+	text-decoration: none;
+}
+
+.nav__link:hover {
+	color: var(--clr-accent);
+}
+
+.nav-toggle {
+	padding: 0.5em;
+	background: transparent;
+	border: 0;
+	cursor: pointer;
+	position: absolute;
+	right: 1em;
+	top: 1em;
+	z-index: 1000;
+}
+
+.nav-open .nav {
+	transform: translateX(0);
+}
+
+.nav-open .nav-toggle {
+	position: fixed;
+}
+
+.nav-open .hamburger {
+	transform: rotate(0.625turn);
+}
+
+.nav-open .hamburger::before {
+	transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after {
+	opacity: 0;
+}
+
+.hamburger {
+	display: block;
+	position: relative;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+	background: var(--clr-accent);
+	width: 2em;
+	height: 3px;
+	border-radius: 1em;
+	transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+	content: "";
+	position: absolute;
+	left: 0;
+	right: 0;
+}
+
+.hamburger::before {
+	top: 6px;
+}
+.hamburger::after {
+	bottom: 6px;
 }
 
 /* Intro Section */
 
 .intro {
 	position: relative;
+	max-width: 1000px;
 }
 
 .intro__img {
@@ -163,12 +273,12 @@ nav {
 	display: inline-block;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 650px) {
 	.intro {
 		display: grid;
 		width: min-content;
 		margin: 0 auto;
-		grid-column-gap: 1em;
+		column-gap: 1em;
 		grid-template-areas:
 			"img title"
 			"img subtitle";
@@ -188,8 +298,8 @@ nav {
 		grid-row: 2;
 		text-align: right;
 		position: relative;
-		left: -1.25em;
-		width: calc(100% + 1.5em);
+		left: -1em;
+		width: calc(100% + 1em);
 	}
 }
 
@@ -199,7 +309,7 @@ nav {
 	background-color: var(--clr-dark);
 	background-image: url(../img/background.png);
 	backgrounnd-size: cover;
-	/* background-blend-mode: multiply; */
+	background-blend-mode: multiply;
 	color: var(--clr-light);
 	text-align: center;
 }
@@ -220,68 +330,174 @@ nav {
 }
 
 .services {
-  margin-bottom: 4em;
+	margin-bottom: 4em;
 }
 
 .service {
-  max-width: 500px;
-  margin: 0 auto;
+	max-width: 500px;
+	margin: 0 auto;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 850px) {
 	.services {
 		display: flex;
 		max-width: 1000px;
 		margin-left: auto;
-    margin-right: auto;
+		margin-right: auto;
 	}
 
-  .service + .service {
-    margin-left: 2em;
-  }
+	.service + .service {
+		margin-left: 2em;
+	}
 }
 
 .about-me {
-  max-width: 1000px;
-  margin: 0 auto;
+	max-width: 1000px;
+	margin: 0 auto;
 }
 
 .about-me__img {
-  box-shadow: var(--bs);
+	box-shadow: var(--bs);
 }
 
-@media (min-width: 600px) {
-  .about-me {
-    display: grid;
-    grid-template-columns: 1fr 200px;
-    grid-template-areas: 
-      "title img"
-      "subtitle img"
-      "text img";
-    grid-column-gap: 2em;
+@media (min-width: 650px) {
+	.about-me {
+		display: grid;
+		grid-template-columns: 1fr 250px;
+		grid-template-areas:
+			"title img"
+			"subtitle img"
+			"text img";
+		column-gap: 2em;
+	}
 
-  }
+	.section__title--about {
+		grid-area: title;
+	}
 
+	.section__subtitle--about {
+		grid-column: 1 / -1;
+		grid-row: 2;
+		position: relative;
+		left: -1em;
+		width: calc(100% + 2em);
+		padding-left: 1em;
+		padding-right: calc(200px + 4em);
+	}
 
-  .section__title--about {
-    grid-area: title;
-  }
+	.about-me__img {
+		grid-area: img;
+		position: relative;
+		z-index: 2;
+	}
+}
 
-  .section__subtitle--about  {
-    grid-column: 1 / -1;
-    grid-row: 2;
-    position: relative;
-    left: -1em;
-    width: calc(100% + 2em);
-    padding-left: 1em;
-    padding-right: calc(200px + 4em);
+/* my work section */
 
-  }
+.my-work {
+	background-color: var(--clr-dark);
+	color: var(--clr-light);
+	text-align: center;
+}
 
-  .about-me__img {
-    grid-area: img;
-    min-width: 250px
-    position: relative;
-    z-index: 2;
-  }
+.section__title--work::after {
+	content: "";
+	display: block;
+	width: 3em;
+	height: 1px;
+	margin: 0.5em auto 1em;
+	background: var(--clr-light);
+	opacity: 0.25;
+}
+
+.portfolio {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	max-width: 1000px;
+}
+
+.portfolio__item {
+	background-color: var(--clr-accent);
+	overflow: hidden;
+}
+
+.portfolio__img {
+	transition: transform 750ms cubic-bezier(0.5, 0, 0.5, 1),
+		opacity 250ms linear;
+}
+
+.portfolio__item:focus {
+	position: relative;
+	z-index: 2;
+}
+
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img {
+	transform: scale(1.2);
+	opacity: 0.75;
+}
+
+/* footer */
+
+.footer {
+	background: #111;
+	color: var(--clr-accent);
+	text-align: center;
+	padding: 2.5em 0;
+	font-size: var(--fs-h3);
+}
+
+.footer a {
+	color: inherit;
+	text-decoration: none;
+}
+
+.footer__link {
+	font-weight: var(--fw-bold);
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+	opacity: 0.7;
+}
+
+.footer__link:hover {
+	text-decoration: underline;
+}
+
+.social-list {
+	list-style: none;
+	display: flex;
+	justify-content: center;
+	margin: 2em 0 0;
+	padding: 0;
+}
+
+.social-list__item {
+	margin: 0 0.5em;
+}
+
+.social-list__link {
+	padding: 0.5em;
+}
+
+/* portfolio item individual styles */
+
+.portfolio-item-individual {
+	padding: 0 2em 2em;
+	max-width: 1000px;
+	margin: 0 auto;
+}
+
+.portfolio-item__img {
+	width: 100%;
+	height: 500px;
+	object-fit: cover;
+	object-position: bottom;
+}
+
+.portfolio-item-individual p {
+	max-width: 600px;
+	margin-right: auto;
+	margin-left: auto;
 }
