--- a/css/style.css
+++ b/css/style.css
@@ -414,10 +414,11 @@ header {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	max-width: 1000px;
+	margin: 0 auto;
 }
 
 .portfolio__item {
-	background-color: var(--clr-accent);
+	background: var(--clr-accent);
 	overflow: hidden;
 }
 
@@ -434,7 +435,7 @@ header {
 .portfolio__img:hover,
 .portfolio__item:focus .portfolio__img {
 	transform: scale(1.2);
-	opacity: 0.75;
+	opacity: 0.5;
 }
 
 /* footer */
