--- a/css/style.css
+++ b/css/style.css
@@ -151,27 +151,57 @@ h3 {
 header {
   display: flex;
   justify-content: space-between;
-  padding: 0.5em;
+  background: var(--clr-light);
 }
 
-.logo {
-  max-width: 75px;
+/* .topbar {
+  position: fixed;
+  height: 6vw;
+  width: 100%;
+  background: var(--clr-light);
+  z-index: 25;
+} */
+
+/* .logo {
   margin: 0;
   padding: 0;
+} */
+
+.logo__link {
+  color: inherit;
+  font-family: "Astloch", system-ui;
+  font-weight: 700;
+  font-size: 1.75rem;
+  text-decoration: none;
+  padding: 0.25em;
 }
 
-.nav {
+.nav__layer {
   position: fixed;
   background: var(--clr-nav);
-  color: var(--clr-light);
-  max-width: 50vw;
+  max-width: 33.5vw;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   z-index: 100;
 
-  transform: translateX(200%);
+  transform: translateX(100vw);
+  transition: transform 250ms ease-in-out;
+}
+
+.nav {
+  position: fixed;
+  background: var(--clr-dark);
+  color: var(--clr-light);
+  max-width: 33vw;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 101;
+
+  transform: translateX(100vw);
   transition: transform 250ms ease-in-out;
 }
 
@@ -195,6 +225,7 @@ header {
 
 .nav__link:hover {
   color: var(--clr-accent);
+  text-shadow: 0.2em 0.2em 0.5em var(--clr-nav);
 }
 
 .nav-toggle {
@@ -209,7 +240,11 @@ header {
 }
 
 .nav-open .nav {
-  transform: translateX(100%);
+  transform: translateX(67vw);
+}
+
+.nav-open .nav__layer {
+  transform: translateX(66.5vw);
 }
 
 .nav-open .nav-toggle {
@@ -346,7 +381,7 @@ header {
   margin: 0 auto;
 }
 
-@media (min-width: 850px) {
+@media (min-width: 800px) {
   .services {
     display: flex;
     max-width: 1000px;
@@ -363,7 +398,7 @@ header {
 
 .about-me {
   max-width: 850px;
-  margin: 0 1.5em;
+  margin: 0 1em;
 }
 
 .about-me__img {
@@ -424,7 +459,7 @@ header {
 
 .portfolio {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   margin: 0 2em;
 }
 
